@@ -14,6 +14,7 @@ package org.eclipse.sirius.components.diagrams.layout.incremental;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.eclipse.sirius.components.diagrams.tests.DiagramAssertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -60,30 +61,96 @@ public class NodeCreationTests {
 
     @Test
     public void testNodeCreationNoResizeNeeded() {
+        Path path = Paths.get("src", "test", "resources", "editing-contexts", "testNodeCreation"); //$NON-NLS-1$//$NON-NLS-2$//$NON-NLS-3$//$NON-NLS-4$ //$NON-NLS-5$
+        JsonBasedEditingContext editingContext = new JsonBasedEditingContext(path);
+
         Position eventCreationPosition = Position.at(10, 10);
         Diagram diagram = this.createParentNotResizedDiagram();
-        this.createNewNode(diagram, eventCreationPosition);
+        this.createNewNode(diagram, editingContext, eventCreationPosition);
+        Diagram layoutedDiagram = this.createNewNode(diagram, editingContext, eventCreationPosition);
+
+        this.testThatChildIsInParentBounds(layoutedDiagram);
     }
 
     @Test
     public void testNodeCreationWithResizeNeeded() {
+        Path path = Paths.get("src", "test", "resources", "editing-contexts", "testNodeCreation"); //$NON-NLS-1$//$NON-NLS-2$//$NON-NLS-3$//$NON-NLS-4$ //$NON-NLS-5$
+        JsonBasedEditingContext editingContext = new JsonBasedEditingContext(path);
+
         Position eventCreationPosition = Position.at(199, 199);
         Diagram diagram = this.createParentNotResizedDiagram();
-        this.createNewNode(diagram, eventCreationPosition);
+        this.createNewNode(diagram, editingContext, eventCreationPosition);
+        Diagram layoutedDiagram = this.createNewNode(diagram, editingContext, eventCreationPosition);
+
+        this.testThatChildIsInParentBounds(layoutedDiagram);
     }
 
     @Test
     public void testNodeCreationInResizedParentNoResizeNeeded() {
+        Path path = Paths.get("src", "test", "resources", "editing-contexts", "testNodeCreation"); //$NON-NLS-1$//$NON-NLS-2$//$NON-NLS-3$//$NON-NLS-4$ //$NON-NLS-5$
+        JsonBasedEditingContext editingContext = new JsonBasedEditingContext(path);
+
         Position eventCreationPosition = Position.at(10, 10);
         Diagram diagram = this.createParentResizedDiagram();
-        this.createNewNode(diagram, eventCreationPosition);
+        this.createNewNode(diagram, editingContext, eventCreationPosition);
+        Diagram layoutedDiagram = this.createNewNode(diagram, editingContext, eventCreationPosition);
+
+        this.testThatChildIsInParentBounds(layoutedDiagram);
     }
 
     @Test
     public void testNodeCreationInResizedParentWithResizeNeeded() {
+        Path path = Paths.get("src", "test", "resources", "editing-contexts", "testNodeCreation"); //$NON-NLS-1$//$NON-NLS-2$//$NON-NLS-3$//$NON-NLS-4$ //$NON-NLS-5$
+        JsonBasedEditingContext editingContext = new JsonBasedEditingContext(path);
+
         Position eventCreationPosition = Position.at(199, 199);
         Diagram diagram = this.createParentResizedDiagram();
-        this.createNewNode(diagram, eventCreationPosition);
+        Diagram layoutedDiagram = this.createNewNode(diagram, editingContext, eventCreationPosition);
+
+        this.testThatChildIsInParentBounds(layoutedDiagram);
+    }
+
+    @Test
+    public void testNodeCreationOutsideItsParent() {
+        Path path = Paths.get("src", "test", "resources", "editing-contexts", "testNodeCreationOutsideItsParent"); //$NON-NLS-1$//$NON-NLS-2$//$NON-NLS-3$//$NON-NLS-4$ //$NON-NLS-5$
+        JsonBasedEditingContext editingContext = new JsonBasedEditingContext(path);
+
+        Position eventCreationPosition = Position.at(100, 100);
+        // @formatter:off
+        Diagram diagram = TestLayoutDiagramBuilder.diagram("Root") //$NON-NLS-1$
+                .nodes()
+                    .rectangleNode("A").at(10, 10).of(200, 300).and() //$NON-NLS-1$
+                    .rectangleNode("B").at(500, 500).of(200, 300).and() //$NON-NLS-1$
+                .and()
+            .build();
+        // @formatter:on
+
+        // we create a child of B by clicking inside of A
+        Diagram layoutedDiagram = this.createNewNode(diagram, editingContext, eventCreationPosition);
+
+        Optional<Node> optionalA = this.getNode(layoutedDiagram.getNodes(), "A"); //$NON-NLS-1$
+        assertThat(optionalA).isPresent();
+        Optional<Node> optionalB = this.getNode(layoutedDiagram.getNodes(), "B"); //$NON-NLS-1$
+        assertThat(optionalB).isPresent();
+        Optional<Node> optionalChild = this.getNode(layoutedDiagram.getNodes(), "Child"); //$NON-NLS-1$
+        assertThat(optionalChild).isPresent();
+
+        // A should not have been resized
+        Node aNode = optionalA.get();
+        double epsilon = 0.000001d;
+        assertEquals(aNode.getPosition().getX(), 10, epsilon);
+        assertEquals(aNode.getPosition().getY(), 10, epsilon);
+        assertEquals(aNode.getSize().getWidth(), 200, epsilon);
+        assertEquals(aNode.getSize().getHeight(), 300, epsilon);
+
+        Node bNode = optionalB.get();
+        // Child should be within B
+        assertThat(bNode).hasEveryChildWithinItsBounds();
+        // B should not haven been resized
+        assertEquals(bNode.getPosition().getX(), 500, epsilon);
+        assertEquals(bNode.getPosition().getY(), 500, epsilon);
+        assertEquals(bNode.getSize().getWidth(), 200, epsilon);
+        assertEquals(bNode.getSize().getHeight(), 300, epsilon);
     }
 
     private Diagram createParentNotResizedDiagram() {
@@ -97,6 +164,16 @@ public class NodeCreationTests {
         // @formatter:on
     }
 
+    private void testThatChildIsInParentBounds(Diagram diagram) {
+        Optional<Node> optionalParent = this.getNode(diagram.getNodes(), "Parent"); //$NON-NLS-1$
+        assertThat(optionalParent).isPresent();
+        Optional<Node> optionalChild = this.getNode(diagram.getNodes(), "Child"); //$NON-NLS-1$
+        assertThat(optionalChild).isPresent();
+
+        Node layoutedParent = optionalParent.get();
+        assertThat(layoutedParent).hasEveryChildWithinItsBounds();
+    }
+
     private Diagram createParentResizedDiagram() {
         // @formatter:off
         return TestLayoutDiagramBuilder.diagram("Root") //$NON-NLS-1$
@@ -108,10 +185,7 @@ public class NodeCreationTests {
         // @formatter:on
     }
 
-    private void createNewNode(Diagram diagram, Position eventCreationPosition) {
-        Path path = Paths.get("src", "test", "resources", "editing-contexts", "testNodeCreation"); //$NON-NLS-1$//$NON-NLS-2$//$NON-NLS-3$//$NON-NLS-4$ //$NON-NLS-5$
-        JsonBasedEditingContext editingContext = new JsonBasedEditingContext(path);
-
+    private Diagram createNewNode(Diagram diagram, IEditingContext editingContext, Position eventCreationPosition) {
         TestDiagramCreationService diagramCreationService = this.createDiagramCreationService(diagram);
 
         Optional<Diagram> optionalRefreshedDiagram = diagramCreationService.performRefresh(editingContext, diagram);
@@ -119,15 +193,7 @@ public class NodeCreationTests {
         Diagram refreshedDiagram = optionalRefreshedDiagram.get();
 
         IDiagramEvent diagramEvent = new NodeCreationEvent(eventCreationPosition);
-        Diagram layoutedDiagram = diagramCreationService.performLayout(editingContext, refreshedDiagram, diagramEvent);
-
-        Optional<Node> optionalParent = this.getNode(layoutedDiagram.getNodes(), "Parent"); //$NON-NLS-1$
-        assertThat(optionalParent).isPresent();
-        Optional<Node> optionalChild = this.getNode(layoutedDiagram.getNodes(), "Child"); //$NON-NLS-1$
-        assertThat(optionalChild).isPresent();
-
-        Node layoutedParent = optionalParent.get();
-        assertThat(layoutedParent).hasEveryChildWithinItsBounds();
+        return diagramCreationService.performLayout(editingContext, refreshedDiagram, diagramEvent);
     }
 
     private TestDiagramCreationService createDiagramCreationService(Diagram diagram) {
